<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_image">login_image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="sign_up">SIGN UP</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="buy_shoes_online">Buy Shoes Online</string>
    <string name="explore_vast_selection_of_products_from_top_brands">Explore vast selection of products from top brands.</string>
    <string name="next">Next</string>
    <string name="free_home_delivery">Free Home Delivery</string>
    <string name="buy_shoes_online_for_men_women_and_kids">Buy shoes online for men, women and kids</string>
    <string name="shop_from_a_wide_range_of_shoes_with_cash_on_delivey">Shop from a wide range of shoes with Cash On Delivey</string>
    <string name="finish">Finish</string>
    <string name="add_shoe">add Shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add_shoe_details">Add Shoe Details</string>
    <string name="save">Save</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="size_7">7</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="default_shoe_image">Default Shoe Image</string>

</resources>