<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoeViewModel"
            type="com.example.shoestore.viewmodel.ShoeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.onboarding.OnboardingOutroFragment">

            <ImageView
                android:id="@+id/delivery"
                android:layout_width="@dimen/dimen_240"
                android:layout_height="@dimen/dimen_240"
                android:contentDescription="@string/onboarding_image"
                android:src="@drawable/ic_delivery"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/outro1_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/free_home_delivery"
                android:textColor="@color/black"
                android:textSize="@dimen/text_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delivery"
                />

            <TextView
                android:id="@+id/intro2_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/shop_from_a_wide_range_of_shoes_with_cash_on_delivey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outro1_textview" />

            <Button
                android:id="@+id/finish_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_48"
                android:layout_marginBottom="@dimen/dimen_32"
                android:text="@string/finish"
                android:onClick="@{() -> shoeViewModel.onOpenShoeList()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>



