<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoeViewModel"
            type="com.example.shoestore.viewmodel.ShoeViewModel" />
    </data>

    <!--    Used ScrollView to allow views to be displayed when the screen is rotated-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!--    Used Constraint layout as it makes handling of complex design much easier with the Design Tab-->
        <!--    Also, constraint layout has tremendous performance advantage as compared to other layout-->
        <!--    https://android-developers.googleblog.com/2017/08/understanding-performance-benefits-of.html-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.login.LoginFragment">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_image"
                android:src="@drawable/login"
                app:layout_constraintBottom_toTopOf="@+id/username_TIL_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_TIL_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.50">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edittext_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={shoeViewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_TIL_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_TIL_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={shoeViewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_64"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:onClick="@{() -> shoeViewModel.onLogin()}"
                android:text="@string/login"
                app:cornerRadius="@dimen/dimen_32"
                app:layout_constraintBottom_toTopOf="@+id/or_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/or_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="@dimen/text_16"
                app:layout_constraintBottom_toTopOf="@+id/signup_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_64"
                android:layout_marginStart="@dimen/dimen_32"
                android:layout_marginEnd="@dimen/dimen_32"
                android:layout_marginBottom="@dimen/dimen_16"
                android:onClick="@{() -> shoeViewModel.onLogin()}"
                android:text="@string/sign_up"
                android:textColor="@color/purple_500"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/dimen_32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>